--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
+cycler==0.10.0
 h5py==2.10.0
+kiwisolver==1.3.1
+matplotlib==3.3.3
 numpy==1.19.1
+pandas==1.3.4
 Pillow==7.2.0
 protobuf==3.13.0
+pyparsing==2.4.7
+python-dateutil==2.8.1
+pytz==2021.3
 scipy==1.5.2
 six==1.15.0
